<resources>
    <string name="app_name">University Course System</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_id">Email Id</string>
    <string name="coast_university">Coast University</string>
    <string name="logout">Logout</string>
    <string name="name_of_student">Name Of Student</string>
    <string name="welcome_to_coast_university">Welcome to Coast University</string>
    <string name="enroll_for_course">Enroll for Course</string>
    <string name="view_time_table">View Time Table</string>
    <string name="add_time_table">Select Time Table</string>
    <string name="female">Female</string>
    <string name="add_student">Add Student</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="admin_panel">Welcome, Admin</string>
    <string name="list_of_all_students">List of All Students</string>
    <string name="courses">Courses</string>
    <string name="cu_mit01">CU-MIT01</string>
    <string name="cu_mit03">CU-MIT03</string>
    <string name="cu_mit02">CU-MIT02</string>
    <string name="cu_mit04">CU-MIT04</string>
    <string name="cu_mit05">CU-MIT05</string>
    <string name="cu_mit06">CU-MIT06</string>
    <string name="cu_mit07">CU-MIT07</string>
    <string name="cu_mit08">CU-MIT08</string>
    <string name="cu_mit09">CU-MIT09</string>
    <string name="cu_mit10">CU-MIT10</string>
    <string name="cu_mit11">CU-MIT11</string>
    <string name="cu_mit12">CU-MIT12</string>
    <string name="cu_mit13">CU-MIT13</string>
    <string name="cu_mit14">CU-MIT14</string>
    <string name="cu_mit15">CU-MIT15</string>
    <string name="cu_mit16">CU-MIT16</string>
    <string name="enroll">Enroll</string>
    <integer name="btnplusview">1</integer>
    <integer name="btnpluspos">2</integer>
</resources>
