<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AdminControl">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/welcome_to_coast_university"
        android:textSize="35sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/nameOfStudent"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@+id/logout_admin"
            android:layout_toStartOf="@+id/logout_admin"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/admin_panel"
            android:textSize="25sp" />

        <Button
            android:id="@+id/logout_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button"
            android:text="@string/logout"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/all_student_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/add_student_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/add_student"
            android:textColor="@android:color/white" />
        <!--<Button-->
            <!--android:id="@+id/show_student_admin"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@drawable/button"-->
            <!--android:text="Show Students"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:textColor="@android:color/white" />-->


    </LinearLayout>
</LinearLayout>